--- a/html/main.css
+++ b/html/main.css
@@ -1149,12 +1149,10 @@ polygon {
 }
 .card2025 {
   border-radius: 2.2em;
-  padding: 5px;
+  border: 2px solid #1b1b1b;
   box-sizing: border-box;
   overflow: hidden;
   display: inline-block;
-  /* this line mimics a 4px solid border */
-  box-shadow: 0 0 0 2px #1b1b1b;
 }
 
 .crop_mockup {
