--- a/templates/workfolder/index.ejs
+++ b/templates/workfolder/index.ejs
@@ -169,7 +169,7 @@
           <div class="Grid-cell">
             <div class="element">
 
-              <%- include(`${templatePath}/shared/base_status`, {
+              <%- include(`${templatePath}/shared/workdeck_project_meta`, {
               statusandtimestamp:'🚀 Launched • Q2 2025'
               }) %>
               <div class="row">
@@ -238,7 +238,7 @@
           <div class="Grid-cell">
             <div class="element">
 
-              <%- include(`${templatePath}/shared/base_status`, {
+              <%- include(`${templatePath}/shared/workdeck_project_meta`, {
               statusandtimestamp:'👩🏻‍💻 In Progress • Q3 2025'
               }) %>
 
@@ -365,7 +365,7 @@
           <div class="Grid-cell">
             <div class="element">
 
-              <%- include(`${templatePath}/shared/base_status`, {
+              <%- include(`${templatePath}/shared/workdeck_project_meta`, {
               statusandtimestamp:'👩🏻‍💻 In Progress • Q3 2025'
               }) %>
 
@@ -487,7 +487,7 @@
           <div class="Grid-cell">
             <div class="element">
 
-              <%- include(`${templatePath}/shared/base_status`, {
+              <%- include(`${templatePath}/shared/workdeck_project_meta`, {
               statusandtimestamp:'🚀 Launched • 2021 - 2024'
               }) %>
               <div class="row">
@@ -592,7 +592,7 @@
           <div class="Grid-cell">
             <div class="element">
 
-              <%- include(`${templatePath}/shared/base_status`, {
+              <%- include(`${templatePath}/shared/workdeck_project_meta`, {
               statusandtimestamp:'💡 Concept - Designed Pre-Launch • Q4 2023'
               }) %>
               <div class="row">
@@ -709,7 +709,7 @@
         <div class="Grid Grid--gutter Grid--top accTrigger">
           <div class="Grid-cell">
             <div class="element">
-              <%- include(`${templatePath}/shared/base_status`, {
+              <%- include(`${templatePath}/shared/workdeck_project_meta`, {
               statusandtimestamp:'👩🏻‍💻 In Progress • Q3 2025'
               }) %>
               <div class="row">
@@ -816,7 +816,7 @@
         <div class="Grid Grid--gutter Grid--top accTrigger">
           <div class="Grid-cell">
             <div class="element">
-              <%- include(`${templatePath}/shared/base_status`, {
+              <%- include(`${templatePath}/shared/workdeck_project_meta`, {
               statusandtimestamp:'🚀 Launched • Q4 20254 - Q1 2025'
               }) %>
               <div class="row">
@@ -913,7 +913,7 @@
         <div class="Grid Grid--gutter Grid--top accTrigger">
           <div class="Grid-cell">
             <div class="element">
-              <%- include(`${templatePath}/shared/base_status`, {
+              <%- include(`${templatePath}/shared/workdeck_project_meta`, {
               statusandtimestamp:'🚀 Launched • Q4 20254 - Q1 2025'
               }) %>
               <div class="row">
@@ -996,7 +996,7 @@
         <div class="Grid Grid--gutter Grid--top accTrigger">
           <div class="Grid-cell">
             <div class="element">
-              <%- include(`${templatePath}/shared/base_status`, {
+              <%- include(`${templatePath}/shared/workdeck_project_meta`, {
               statusandtimestamp:'🚀 Launched • Q4 2023'
               }) %>
               <div class="row">
@@ -1079,7 +1079,7 @@
         <div class="Grid Grid--gutter Grid--top accTrigger">
           <div class="Grid-cell">
             <div class="element">
-              <%- include(`${templatePath}/shared/base_status`, {
+              <%- include(`${templatePath}/shared/workdeck_project_meta`, {
               statusandtimestamp:'💡 Research • Q4 2023'
               }) %>
               <div class="row">
@@ -1174,7 +1174,7 @@
         <div class="Grid Grid--gutter Grid--top accTrigger">
           <div class="Grid-cell">
             <div class="element">
-              <%- include(`${templatePath}/shared/base_status`, {
+              <%- include(`${templatePath}/shared/workdeck_project_meta`, {
               statusandtimestamp:'🚀 Launched • Q4 2024'
               }) %>
               <div class="row">
@@ -1265,7 +1265,7 @@
         <div class="Grid Grid--gutter Grid--top accTrigger">
           <div class="Grid-cell">
             <div class="element">
-                            <%- include(`${templatePath}/shared/base_status`, {
+                            <%- include(`${templatePath}/shared/workdeck_project_meta`, {
               statusandtimestamp:'🚀 Launched • Q1 2025'
               }) %>
               <div class="row">
@@ -1356,7 +1356,7 @@
         <div class="Grid Grid--gutter Grid--top accTrigger">
           <div class="Grid-cell">
             <div class="element">
-                  <%- include(`${templatePath}/shared/base_status`, {
+                  <%- include(`${templatePath}/shared/workdeck_project_meta`, {
               statusandtimestamp:'🚀 Launched • Q1 2025'
               }) %>
               <div class="row">
